# satori

./: .gitignore  LICENSE  README.md  satori.cabal  stack.yaml
app/: Main.hs
src/: Closure.hs  Codegen.hs  Core.hs  Curry.hs  Desugar.hs  Emit.hs  Environment.hs  Eval.hs  Fix.hs  Infer.hs  JIT.hs  Lexer.hs  Lib.hs  Lift.hs  Parser.hs  Pretty.hs  Substitute.hs  Syntax.hs  Type.hs
test/: Spec.hs
