name:                satori
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/jjingram/satori#readme
license:             BSD3
license-file:        LICENSE
author:              Jarrod Jeffrey Ingram
maintainer:          jarrod.jeffi@gmail.com
copyright:           2017 Jarrod Jeffrey Ingram
category:            Compiler
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lexer
                     , Syntax
                     , Parser
                     , Curry
                     , Type
                     , Environment
                     , Pretty
                     , Infer
                     , Substitute
                     , Closure
                     , Lift
                     , Codegen
                     , Emit
  build-depends:       base
                     , transformers
                     , llvm-general
                     , llvm-general-pure
                     , parsec
                     , mtl
                     , containers
                     , pretty
  default-language:    Haskell2010

executable satori-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , satori
                     , repline
                     , mtl
                     , llvm-general-pure
                     , containers
  default-language:    Haskell2010

test-suite satori-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , satori
                     , HUnit
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/jjingram/satori
